add bottom sheet

--- a/app/src/main/res/layout/fragment_send_transaction.xml
+++ b/app/src/main/res/layout/fragment_send_transaction.xml
@@ -7,6 +7,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginTop="18dp"
+    android:layout_marginHorizontal="12dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.sendtransaction.SendTransactionFragment">
 
