--- a/app/src/main/res/layout/fragment_associate.xml
+++ b/app/src/main/res/layout/fragment_associate.xml
@@ -14,6 +14,9 @@
     <com.google.android.material.progressindicator.CircularProgressIndicator
         android:layout_width="50dp"
         android:layout_height="50dp"
+        android:layout_marginTop="18dp"
+        android:layout_marginHorizontal="12dp"
+        app:indicatorColor="?android:attr/colorForeground"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
