--- a/app/src/main/res/layout/fragment_authorize_dapp.xml
+++ b/app/src/main/res/layout/fragment_authorize_dapp.xml
@@ -9,6 +9,8 @@
     android:id="@+id/authorize"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginTop="18dp"
+    android:layout_marginHorizontal="12dp"
     tools:context=".ui.authorizedapp.AuthorizeDappFragment">
 
     <androidx.appcompat.widget.AppCompatTextView
