--- a/app/src/main/res/layout/fragment_authorize_dapp.xml
+++ b/app/src/main/res/layout/fragment_authorize_dapp.xml
@@ -8,33 +8,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/authorize"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:layout_marginTop="18dp"
     android:layout_marginHorizontal="12dp"
+    android:paddingBottom="8dp"
     tools:context=".ui.authorizedapp.AuthorizeDappFragment">
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/label_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:text="@string/label_authorize_dapp"
-        android:textSize="24sp"
-        android:textAllCaps="true"/>
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/image_icon"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
         android:layout_margin="8dp"
-        app:layout_constraintTop_toBottomOf="@id/label_title"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:src="@android:drawable/ic_menu_report_image" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/text_name"
+        style="@style/Theme.MwalletApp.Header"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
@@ -42,120 +33,44 @@
         app:layout_constraintBottom_toBottomOf="@id/image_icon"
         app:layout_constraintStart_toEndOf="@id/image_icon"
         app:layout_constraintEnd_toEndOf="parent"
-        android:textSize="22sp" />
+        tools:text="Awesome Dapp"/>
 
     <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/text_uri"
-        android:layout_width="wrap_content"
+        android:id="@+id/text_subtitle"
+        style="@style/Theme.MwalletApp.Subtitle"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         app:layout_constraintTop_toBottomOf="@id/image_icon"
         app:layout_constraintStart_toStartOf="parent"
-        android:textSize="22sp" />
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/label_cluster"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        app:layout_constraintTop_toBottomOf="@id/text_uri"
-        app:layout_constraintStart_toStartOf="parent"
-        android:text="@string/label_cluster"
-        android:textSize="22sp" />
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/text_cluster"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        app:layout_constraintTop_toTopOf="@id/label_cluster"
-        app:layout_constraintBottom_toBottomOf="@id/label_cluster"
-        app:layout_constraintStart_toEndOf="@id/label_cluster"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:textSize="22sp" />
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/label_verification_state"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        app:layout_constraintTop_toBottomOf="@id/label_cluster"
-        app:layout_constraintStart_toStartOf="parent"
-        android:text="@string/label_verification_state"
-        android:textSize="22sp" />
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/text_verification_state"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="8dp"
-        app:layout_constraintTop_toTopOf="@id/label_verification_state"
-        app:layout_constraintBottom_toBottomOf="@id/label_verification_state"
-        app:layout_constraintStart_toEndOf="@id/label_verification_state"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:textSize="22sp" />
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/label_verification_scope"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        app:layout_constraintTop_toBottomOf="@id/label_verification_state"
-        app:layout_constraintStart_toStartOf="parent"
-        android:text="@string/label_verification_scope"
-        android:textSize="22sp" />
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/text_verification_scope"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="8dp"
-        app:layout_constraintTop_toTopOf="@id/label_verification_scope"
-        app:layout_constraintBottom_toBottomOf="@id/label_verification_scope"
-        app:layout_constraintStart_toEndOf="@id/label_verification_scope"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:textSize="22sp" />
+        android:text="@string/label_wants_to_connect" />
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btn_authorize"
-        android:layout_width="wrap_content"
+        android:id="@+id/btn_cancel"
+        style="@style/Theme.MwalletApp.Button"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        app:layout_constraintTop_toBottomOf="@id/text_verification_scope"
-        app:layout_constraintStart_toStartOf="parent"
-        android:text="@string/label_authorize"
-        android:textSize="22sp" />
-
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btn_decline"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        app:layout_constraintTop_toBottomOf="@id/text_verification_scope"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:text="@string/label_decline"
-        android:textSize="22sp" />
-
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btn_simulate_cluster_not_supported"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="8dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="24dp"
         android:layout_marginBottom="8dp"
-        app:layout_constraintTop_toBottomOf="@id/btn_authorize"
-        android:text="@string/label_simulate_cluster_not_supported"
-        android:textSize="22sp"
-        android:minLines="2" />
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintEnd_toStartOf="@id/btn_connect"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/text_subtitle"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="@string/label_cancel" />
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btn_simulate_internal_error"
-        android:layout_width="match_parent"
+        android:id="@+id/btn_connect"
+        style="@style/Theme.MwalletApp.Button.Outlined"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
-        app:layout_constraintTop_toBottomOf="@id/btn_simulate_cluster_not_supported"
-        android:text="@string/label_simulate_internal_error"
-        android:textSize="22sp"
-        android:minLines="2" />
+        app:layout_constraintTop_toTopOf="@id/btn_cancel"
+        app:layout_constraintBottom_toBottomOf="@id/btn_cancel"
+        app:layout_constraintStart_toEndOf="@id/btn_cancel"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:text="@string/label_connect" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
