--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,11 +4,22 @@
   -->
 
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
+<!--    <color name="purple_200">#FFBB86FC</color>-->
+<!--    <color name="purple_500">#FF6200EE</color>-->
+<!--    <color name="purple_700">#FF3700B3</color>-->
+<!--    <color name="teal_200">#FF03DAC5</color>-->
+<!--    <color name="teal_700">#FF018786</color>-->
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="green_100">#FFd1f6ce</color>
+    <color name="green_200">#FFb2efad</color>
+    <color name="green_400">#FF73E26F</color>
+    <color name="green_700">#FF26b541</color>
+    <color name="lilac_100">#FFD3BCFF</color>
+    <color name="lilac_400">#FF7946d5</color>
+    <color name="lilac_700">#FF4415ba</color>
+    <color name="grey_16">#FF282828</color>
+    <color name="grey_55">#FF8C8C8C</color>
+    <color name="off_white_dark">#FFEEEEE7</color>
+    <color name="off_white">#FFFCFCF7</color>
 </resources>
