--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -4,15 +4,15 @@
 
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.MwalletApp" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.MwalletApp" parent="Theme.MaterialComponents.DayNight.DarkActionBar.Bridge">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorPrimary">@color/lilac_400</item>
+        <item name="colorPrimaryVariant">@color/lilac_700</item>
+        <item name="colorOnPrimary">@color/off_white</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorSecondary">@color/green_400</item>
+        <item name="colorSecondaryVariant">@color/green_700</item>
+        <item name="colorOnSecondary">@color/grey_16</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
@@ -69,4 +69,35 @@
         <!--        <item name="android:windowAnimationStyle">@style/Animation.MaterialComponents.BottomSheetDialog</item>-->
         <!--        <item name="bottomSheetStyle">@style/Widget.Material3.BottomSheet.Modal</item>-->
     </style>
+
+    <style name="Theme.MwalletApp.Button">
+        <item name="android:textColor">@color/off_white</item>
+        <item name="android:background">@drawable/button_secondary</item>
+
+        <item name="android:fontFamily">@font/inter_tight_semi_bold</item>
+        <item name="android:letterSpacing">0.001</item>
+        <item name="android:minHeight">56dp</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textSize">22sp</item>
+    </style>
+
+    <style name="Theme.MwalletApp.Button.Outlined" parent="Theme.MwalletApp.Button">
+        <item name="android:textColor">@color/grey_16</item>
+        <item name="android:background">@drawable/button_primary</item>
+    </style>
+
+    <style name="Theme.MwalletApp.Header" parent="TextAppearance.AppCompat">
+        <item name="android:textColor">@color/grey_16</item>
+        <item name="android:fontFamily">@font/inter_tight_semi_bold</item>
+        <item name="android:letterSpacing">0.001</item>
+        <item name="android:textSize">22sp</item>
+    </style>
+
+    <style name="Theme.MwalletApp.Subtitle" parent="TextAppearance.AppCompat">
+        <item name="android:textColor">@color/grey_55</item>
+        <item name="android:fontFamily">@font/inter_tight_medium</item>
+        <item name="android:letterSpacing">0.001</item>
+        <item name="android:textSize">18sp</item>
+    </style>
+
 </resources>
