--- a/app/src/main/res/layout/fragment_sign_in.xml
+++ b/app/src/main/res/layout/fragment_sign_in.xml
@@ -11,6 +11,7 @@
     android:layout_height="wrap_content"
     android:layout_marginTop="18dp"
     android:layout_marginHorizontal="12dp"
+    android:paddingBottom="8dp"
     tools:context=".ui.authorizedapp.AuthorizeDappFragment">
 
     <androidx.appcompat.widget.AppCompatImageView
