--- a/app/src/main/res/layout/fragment_send_transaction.xml
+++ b/app/src/main/res/layout/fragment_send_transaction.xml
@@ -6,24 +6,26 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:layout_marginTop="18dp"
     android:layout_marginHorizontal="12dp"
+    android:paddingBottom="8dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.sendtransaction.SendTransactionFragment">
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/label_send_transaction"
+        style="@style/Theme.MwalletApp.Header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
         app:layout_constraintTop_toTopOf="parent"
         android:text="@string/label_send_transactions"
-        android:textSize="24sp"
-        android:textAllCaps="true"/>
+        android:textSize="24sp"/>
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/label_cluster"
+        style="@style/Theme.MwalletApp.Subtitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
@@ -34,6 +36,7 @@
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/text_cluster"
+        style="@style/Theme.MwalletApp.Subtitle"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_marginHorizontal="8dp"
@@ -42,33 +45,16 @@
         app:layout_constraintStart_toEndOf="@id/label_cluster"
         android:textSize="22sp" />
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btn_simulate_transactions_submitted"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginHorizontal="8dp"
+    <com.google.android.material.progressindicator.CircularProgressIndicator
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginVertical="18dp"
+        android:layout_marginHorizontal="12dp"
+        app:indicatorColor="?android:attr/colorForeground"
         app:layout_constraintTop_toBottomOf="@id/label_cluster"
-        android:text="@string/label_simulate_transactions_submitted"
-        android:textSize="22sp" />
-
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btn_simulate_transactions_not_submitted"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        app:layout_constraintTop_toBottomOf="@id/btn_simulate_transactions_submitted"
-        android:text="@string/label_simulate_transactions_not_submitted"
-        android:textSize="22sp" />
-
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btn_send_transaction_to_cluster"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        app:layout_constraintTop_toBottomOf="@id/btn_simulate_transactions_not_submitted"
-        android:text="@string/label_send_transaction_to_cluster"
-        android:textSize="22sp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:indeterminate="true" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
