--- a/app/src/main/res/layout/fragment_sign_message.xml
+++ b/app/src/main/res/layout/fragment_sign_message.xml
@@ -8,16 +8,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="18dp"
-    android:layout_marginHorizontal="12dp"
+    android:layout_marginVertical="12dp"
+    android:layout_marginHorizontal="20dp"
     android:paddingBottom="8dp"
     tools:context=".ui.authorizedapp.AuthorizeDappFragment">
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/image_icon"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
-        android:layout_margin="8dp"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:src="@android:drawable/ic_menu_report_image" />
@@ -27,10 +26,9 @@
         style="@style/Theme.MwalletApp.Header"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        app:layout_constraintTop_toTopOf="@id/image_icon"
-        app:layout_constraintBottom_toBottomOf="@id/image_icon"
-        app:layout_constraintStart_toEndOf="@id/image_icon"
+        android:layout_marginTop="24dp"
+        app:layout_constraintTop_toBottomOf="@id/image_icon"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         tools:text="Awesome Dapp"/>
 
@@ -39,9 +37,7 @@
         style="@style/Theme.MwalletApp.Subtitle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        app:layout_constraintTop_toBottomOf="@id/image_icon"
+        app:layout_constraintTop_toBottomOf="@id/text_name"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:text="@string/label_sign_in_subtitle" />
@@ -52,8 +48,6 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
         app:layout_constraintTop_toBottomOf="@id/text_subtitle"
         app:layout_constraintStart_toStartOf="parent"
         android:text="@string/label_message"
@@ -65,8 +59,6 @@
         style="@style/Theme.MwalletApp.Subtitle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
         android:padding="8dp"
         app:layout_constraintTop_toBottomOf="@id/text_message_title"
         app:layout_constraintStart_toStartOf="parent"
@@ -76,18 +68,25 @@
         android:textColor="@color/grey_55"
         android:textSize="18sp"/>
 
+    <View
+        android:id="@+id/divider"
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:layout_marginTop="16dp"
+        android:background="@color/off_white_dark"
+        app:layout_constraintTop_toBottomOf="@id/text_message" />
+
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_cancel"
         style="@style/Theme.MwalletApp.Button"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="20dp"
         android:layout_marginBottom="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="48dp"
         app:layout_constraintEnd_toStartOf="@id/btn_approve"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/text_message"
+        app:layout_constraintTop_toBottomOf="@id/divider"
         app:layout_constraintBottom_toBottomOf="parent"
         android:text="@string/label_cancel" />
 
@@ -96,7 +95,6 @@
         style="@style/Theme.MwalletApp.Button.Outlined"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
         app:layout_constraintTop_toTopOf="@id/btn_cancel"
         app:layout_constraintBottom_toBottomOf="@id/btn_cancel"
         app:layout_constraintStart_toEndOf="@id/btn_cancel"
