--- a/app/src/main/res/layout/fragment_sign_transaction.xml
+++ b/app/src/main/res/layout/fragment_sign_transaction.xml
@@ -51,61 +51,16 @@
         app:layout_constraintTop_toBottomOf="@id/text_subtitle"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:text="Transaction Details" />
-
-    <View
-        android:id="@+id/divider_top"
-        android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:layout_marginTop="12dp"
-        android:background="@color/off_white_dark"
-        app:layout_constraintTop_toBottomOf="@id/text_tx_details_title" />
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/text_to_address_title"
-        style="@style/Theme.MwalletApp.Subtitle"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        app:layout_constraintTop_toBottomOf="@id/divider_top"
-        app:layout_constraintStart_toStartOf="parent"
-        android:text="@string/label_to_address"
-        android:textColor="@color/off_white_dark"
-        android:textSize="18sp"/>
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/text_to_address"
-        style="@style/Theme.MwalletApp.Subtitle"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:padding="8dp"
-        app:layout_constraintTop_toBottomOf="@id/text_to_address_title"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        tools:text="1234wxyz"
-        android:background="@drawable/background_grey_rounded_corners"
-        android:textColor="@color/grey_55"
-        android:textSize="18sp"/>
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/text_simulation_title"
-        style="@style/Theme.MwalletApp.Subtitle"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        app:layout_constraintTop_toBottomOf="@id/text_to_address"
-        app:layout_constraintStart_toStartOf="parent"
-        android:text="@string/label_simulation_results"
-        android:textColor="@color/off_white_dark"
-        android:textSize="18sp"/>
+        android:text="@string/label_expected_changes" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/text_simulation"
         style="@style/Theme.MwalletApp.Subtitle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
         android:padding="8dp"
-        app:layout_constraintTop_toBottomOf="@id/text_simulation_title"
+        app:layout_constraintTop_toBottomOf="@id/text_tx_details_title"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         tools:text="+1000 SOL\n-1 USDC"
@@ -114,39 +69,13 @@
         android:textSize="18sp"
         android:text="@string/label_sim_not_available"/>
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/text_origin_title"
-        style="@style/Theme.MwalletApp.Subtitle"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        app:layout_constraintTop_toBottomOf="@id/text_simulation"
-        app:layout_constraintStart_toStartOf="parent"
-        android:text="@string/label_origin"
-        android:textColor="@color/off_white_dark"
-        android:textSize="18sp"/>
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/text_origin"
-        style="@style/Theme.MwalletApp.Subtitle"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:padding="8dp"
-        app:layout_constraintTop_toBottomOf="@id/text_origin_title"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        tools:text="awesomedapp.xyz"
-        android:background="@drawable/background_grey_rounded_corners"
-        android:textColor="@color/grey_55"
-        android:textSize="18sp"/>
-
     <View
         android:id="@+id/divider_bottom"
         android:layout_width="match_parent"
         android:layout_height="2dp"
         android:layout_marginTop="16dp"
         android:background="@color/off_white_dark"
-        app:layout_constraintTop_toBottomOf="@id/text_origin" />
+        app:layout_constraintTop_toBottomOf="@id/text_simulation" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_cancel"
