--- a/app/src/main/res/navigation/nav_mobile_wallet_adapter.xml
+++ b/app/src/main/res/navigation/nav_mobile_wallet_adapter.xml
@@ -29,6 +29,11 @@
             app:destination="@id/fragment_sign_payload"
             app:popUpTo="@id/fragment_associate"
             app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_sign_transaction"
+            app:destination="@id/fragment_sign_transaction"
+            app:popUpTo="@id/fragment_associate"
+            app:popUpToInclusive="true" />
     </fragment>
 
     <fragment
@@ -60,6 +65,18 @@
         android:name="com.solana.mwallet.ui.signpayload.SignPayloadFragment"
         android:label="fragment_sign_payload"
         tools:layout="@layout/fragment_sign_payload">
+        <action
+            android:id="@+id/action_sign_payload_complete"
+            app:destination="@id/nav_mobile_wallet_adapter"
+            app:popUpTo="@id/fragment_sign_payload"
+            app:popUpToInclusive="true" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/fragment_sign_transaction"
+        android:name="com.solana.mwallet.ui.signpayload.SignTransactionFragment"
+        android:label="fragment_sign_transaction"
+        tools:layout="@layout/fragment_sign_transaction">
         <action
             android:id="@+id/action_sign_payload_complete"
             app:destination="@id/nav_mobile_wallet_adapter"
